Melhoria na estrutura do projeto

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <option value="en">English (EUA)</option>
                 <option value="es">Español (ES)</option>
             </select>
+            
         </nav>
       </header>
 
@@ -86,25 +87,25 @@
 
                 <div class="home__perfil">
                     <div class="home__image">
-                        <img src="/assets/img/Vana Studio - Close-up portrait of   in a beautiful painting, soft pastel col… 1.png" alt="imagem" class="home__img">
+                        <img src="/assets/img/Vana Studio - Close-up portrait of   in a beautiful painting, soft pastel col… 1.png" alt="foto pessoal" class="home__img">
                         <div class="home__shadow"></div>
 
-                        <img src="/assets/img/curved-arrow.svg" alt="" class="home__arrow">
-                        <img src="/assets/img/random-lines.svg" alt="" class="home__line">
+                        <img src="/assets/img/curved-arrow.svg" alt="flecha" class="home__arrow">
+                        <img src="/assets/img/random-lines.svg" alt="linha" class="home__line">
 
                         <div class="geometric-box"></div>
                     </div>
 
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/notedsilva/" target="_blank" class="home__social-link">
+                        <a href="https://www.linkedin.com/in/notedsilva/" title="Linkedin" target="_blank" class="home__social-link">
                             <i class="ri-linkedin-box-line"></i>
                         </a>
 
-                        <a href="https://github.com/NotedSilva" target="_blank" class="home__social-link">
+                        <a href="https://github.com/NotedSilva" title="Github" target="_blank" class="home__social-link">
                             <i class="ri-github-line"></i>
                         </a>
 
-                        <a href="/assets/img/Curriculo_Ti.pdf" target="_blank" class="home__social-link" onclick="return confirmDownload()">
+                        <a href="/assets/img/Curriculo_Ti.pdf" title="Visualizar Currículo" target="_blank" class="home__social-link" onclick="return confirmDownload()">
                             <i class="ri-file-download-line"></i>
                         </a>
                     </div>
@@ -112,8 +113,9 @@
 
                 <div class="home__info">
                     <p class="home__description" id="home__description">
-                        <b>Full Stack</b>, com conhecimento em desenvolvimento web e design,
-                         ofereço os melhores projetos resultando em trabalhos de qualidade.
+                        <b>Full Stack</b>, Com habilidades sólidas em desenvolvimento web
+                           e ampla expertise tanto em front-end quanto em back-end,
+                           sou especializado na criação de soluções tecnológicas inovadoras, desde a concepção até a implementação. 
                     </p>
 
                     <a href="#sobre" class="home__scroll">
@@ -138,21 +140,21 @@
 
                 <div class="about__perfil">
                     <div class="about__image">
-                        <img src="/assets/img/Vana Studio - Close-up portrait of   in a beautiful painting, soft pastel col… 3.png" alt="imagem" class="about__img">
+                        <img src="/assets/img/Vana Studio - Close-up portrait of   in a beautiful painting, soft pastel col… 3.png" alt="imagem pessoal" class="about__img">
 
                         <div class="about__shadow"></div>
 
                         <div class="geometric-box"></div>
-                        <img src="/assets/img/random-lines.svg" alt="" class="about__line">
+                        <img src="/assets/img/random-lines.svg" alt="Linha" class="about__line">
                         <div class="about__box"></div>
                     </div>
                 </div>
 
                 <div class="about__info">
                     <p class="about__description" id="about__description">
-                        Apaixonado por criar <b>Páginas Web</b> com 
-                        <b>UI/UX Interface de usuário</b>, tenho anos
-                        de experiência e muitos clientes ficam satisfeitos com os projetos realizados.
+                        Entusiasta na criação de <b>Aplicações Web</b> com foco em
+                        <b>UI/UX Design</b>, possuo amplo conhecimento em diversas tecnologias,
+                        visando desenvolver projetos altamente satisfatórios.
                     </p>
 
                     <ul class="about__list" id="about__list">
@@ -162,7 +164,7 @@
                         <div class="skills__info">
                             <div class="skills__data">
                                 <div class="skills__blob">
-                                    <img src="/assets/img/css-3.svg" alt="Skills image">
+                                    <img src="/assets/img/css-3.svg" alt="Logo CSS">
                                 </div>
                                 <h3 class="skills__name">CSS</h3>
                                 <span class="skills__subtitle">Intermediário</span>
@@ -170,7 +172,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__blob">
-                                    <img src="/assets/img/html-1.svg" alt="Skills image">
+                                    <img src="/assets/img/html-1.svg" alt="Logo HTML">
                                 </div>
                                 <h3 class="skills__name">HTML</h3>
                                 <span class="skills__subtitle">Avançado</span>
@@ -179,7 +181,7 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="/assets/img/git-icon.svg" alt="Skills image">
+                                <img src="/assets/img/git-icon.svg" alt="Logo Git">
                             </div>
                             <h3 class="skills__name">GIT</h3>
                             <span class="skills__subtitle">Intermediário</span>
@@ -187,7 +189,7 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="/assets/img/logo-javascript.svg" alt="Skills image">
+                                <img src="/assets/img/logo-javascript.svg" alt="Logo JavaScript">
                             </div>
                             <h3 class="skills__name">JAVASCRIPT</h3>
                             <span class="skills__subtitle">Intermediário</span>
@@ -195,7 +197,7 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="/assets/img/react-2.svg" alt="Skills image">
+                                <img src="/assets/img/react-2.svg" alt="Logo React">
                             </div>
                             <h3 class="skills__name">REACT</h3>
                             <span class="skills__subtitle">Básico</span>
@@ -203,7 +205,7 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="/assets/img/python-5.svg" alt="Skills image">
+                                <img src="/assets/img/python-5.svg" alt="Logo Python">
                             </div>
                             <h3 class="skills__name">PYTHON</h3>
                             <span class="skills__subtitle">Básico</span>
@@ -211,7 +213,7 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="/assets/img/github-icon-2.svg" alt="Skills image">
+                                <img src="/assets/img/github-icon-2.svg" alt="Logo Github">
                             </div>
                             <h3 class="skills__name">GITHUB</h3>
                             <span class="skills__subtitle">Intermediário</span>
@@ -219,7 +221,7 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="/assets/img/mysql-logo.svg" alt="Skills image">
+                                <img src="/assets/img/mysql-logo.svg" alt="Logo MY SQL">
                             </div>
                             <h3 class="skills__name">MY SQL</h3>
                             <span class="skills__subtitle">Intermediário</span>
@@ -232,7 +234,7 @@
                             <i class="ri-send-plane-line"></i> Contate-me
                         </a>
 
-                        <a href="https://www.linkedin.com/in/notedsilva/" target="_blank" class="button__ghost">
+                        <a href="https://www.linkedin.com/in/notedsilva/" title="Linkedin" target="_blank" class="button__ghost">
                             <i class="ri-linkedin-box-line"></i>
                         </a>
                     </div>
@@ -259,8 +261,9 @@
                         <h2 class="services__title" id="services__title1">Designer Web</h2>
 
                         <p class="services__description" id="services__description1">
-                            Designs bonitos e elegantes com interfaces intuitivas,
-                            eficientes e agradáveis ​​de usar para o usuário.
+                            Focado em produzir designs atraentes e elegantes,
+                            com interfaces intuitivas e eficientes para uma
+                            experiência de usuário agradável.
                         </p>
                     </div>
                 </article>
@@ -277,7 +280,7 @@
                         <h2 class="services__title" id="services__title2">Desenvolvimento</h2>
 
                         <p class="services__description" id="services__description2">
-                            Desenvolvimento web personalizado, adaptado às suas especificações,
+                            Desenvolvimento personalizado, adaptado às suas especificações,
                             projetado para fornecer uma experiência de usuário impecável.
                         </p>
                     </div>
@@ -295,8 +298,9 @@
                         <h2 class="services__title" id="services__title3">Aplicativo Móvel</h2>
 
                         <p class="services__description" id="services__description3">
-                            Projete e transforme projetos de sites em aplicativos
-                            móveis para fornecer uma experiência de usuário perfeita.
+                            Adapto e transformo projetos web em aplicativos móveis com responsividade,
+                            garantindo uma experiência de usuário perfeita
+                            e intuitiva em qualquer dispositivo.
                         </p>
                     </div>
                 </article>
@@ -449,13 +453,12 @@
                     </h2>
 
                     <p class="contact__description-1" id="contact__descriptioncontato">
-                        Lerei todos os e-mails. Envie-me qualquer mensagem
-                        que entrarei em contato com você.
+                        Envie-me sua mensagem que entrarei em contato em breve.
                     </p>
 
                     <p class="contact__description-2" id="contact__descriptioncontato2">
-                        Preciso do seu <b>Nome</b> e <b>Endereço de E-mail</b>,
-                        mas você não receberá nada além da sua resposta.
+                        Preciso que tenha seu <b>Nome</b> e <b>Endereço de E-mail</b>,
+                        para que eu possa te responder adequadamente.
                     </p>
 
                     <div class="geometric-box"></div>
@@ -498,7 +501,7 @@
                 </div>
 
                 <div class="contact__social">
-                    <img src="/assets/img/curved-arrow.svg" alt="" class="contact__social-arrow">
+                    <img src="/assets/img/curved-arrow.svg" alt="seta" class="contact__social-arrow">
 
                     <div class="contact__social-data">
                         <div>
@@ -512,15 +515,15 @@
                         </div>
 
                         <div class="contact__social-links">
-                            <a href="https://www.linkedin.com/in/notedsilva/" target="_blank" class="contact__social-link">
+                            <a href="https://www.linkedin.com/in/notedsilva/" title="Linkedin" target="_blank" class="contact__social-link">
                                 <i class="ri-linkedin-box-line"></i>
                             </a>
 
-                            <a href="" target="_blank" class="contact__social-link">
+                            <a href="" target="_blank" title="Twitter" class="contact__social-link">
                                 <i class="ri-twitter-line"></i>
                             </a>
 
-                            <a href="https://www.instagram.com/blonded__ocean/" target="_blank" class="contact__social-link">
+                            <a href="https://www.instagram.com/blonded__ocean/" title="Instagram" target="_blank" class="contact__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
                         </div>
