--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                     <i class="ri-menu-4-line"></i>
                 </div>
             </div>
-
+            <!--
             <select class="languageSelector" id="languageSelector">
                 <option value="pt-br">Português (BR)</option>
                 <option value="en">English (EUA)</option>
                 <option value="es">Español (ES)</option>
             </select>
-            
+            -->
         </nav>
       </header>
 
@@ -316,30 +316,30 @@
             <div class="projects__container container grid">
                 <article class="projects__card">
                     <div class="projects__image">
-                        <img src="/assets/img/project-1.jpg" alt="imagem" class="projects__img">
+                        <img src="/assets/img/projeto1.png" alt="imagem" class="projects__img">
 
-                        <a href="#" class="projects__button button">
+                        <a href="https://weather-9u1mxa9tb-gabriels-projects-c8faea05.vercel.app" target="_blank" class="projects__button button">
                             <i class="ri-arrow-right-up-line"></i>
                         </a>
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle" id="projects__subtitle1">Website</h3>
-                        <h2 class="projects__title" id="projects__title1">Site de Carros</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle1">API's</h3>
+                        <h2 class="projects__title" id="projects__title1">Site de Clima</h2>
 
                         <p class="projects__description" id="projects__description1">
-                            Projeto que você realiza na concepção e estrutura do layout,
-                            apresentando o desenho a pedido do cliente.
+                            Este projeto foi criado em <b>HTML</b>, <b>CSS</b>, e <b>JAVASCRIPT</b> com a finalidade de ter um aprendizado
+                             abrangente e prático no contexto do uso e consumo de APIs.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link" id="projects__link1">
+                        <a href="https://github.com/NotedSilva/Weather-Api" target="_blank" class="projects__link" id="projects__link1">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link" id="projects__link2">
+                        <a href="https://weather-9u1mxa9tb-gabriels-projects-c8faea05.vercel.app" target="_blank" class="projects__link" id="projects__link2">
                             <i class="ri-dribbble-line"></i>
                             Deploy
                         </a>
@@ -348,30 +348,30 @@
 
                 <article class="projects__card">
                     <div class="projects__image">
-                        <img src="/assets/img/project-2.jpg" alt="imagem" class="projects__img">
+                        <img src="/assets/img/projeto2.png" alt="imagem" class="projects__img">
 
-                        <a href="#" class="projects__button button">
+                        <a href="https://site-caregier-final.vercel.app" target="_blank" class="projects__button button">
                             <i class="ri-arrow-right-up-line"></i>
                         </a>
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle" id="projects__subtitle2">App</h3>
-                        <h2 class="projects__title" id="projects__title2">Quiz App</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle2">Website</h3>
+                        <h2 class="projects__title" id="projects__title2">Site para Cuidadores</h2>
 
                         <p class="projects__description" id="projects__description2">
-                            Projeto que você realiza na concepção e estrutura do layout,
-                            apresentando o desenho a pedido do cliente.
+                            Projeto desenvolvido em <b>REACT</b> como parte do meu (TCC). 
+                            Este projeto tem como objetivo, facilitar a interação do usuário com cuidadores qualificados.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link" id="projects__link3">
+                        <a href="https://github.com/NotedSilva/projeto-caregiver" target="_blank" class="projects__link" id="projects__link3">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link" id="projects__link4">
+                        <a href="https://site-caregier-final.vercel.app" target="_blank" class="projects__link" id="projects__link4">
                             <i class="ri-dribbble-line"></i>
                             Deploy
                         </a>
@@ -380,30 +380,30 @@
 
                 <article class="projects__card">
                     <div class="projects__image">
-                        <img src="/assets/img/project-3.jpg" alt="imagem" class="projects__img">
+                        <img src="/assets/img/projeto3.png" alt="imagem" class="projects__img">
 
-                        <a href="#" class="projects__button button">
+                        <a href="https://github.com/NotedSilva/AnimeNavigation" target="_blank" class="projects__button button">
                             <i class="ri-arrow-right-up-line"></i>
                         </a>
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle" id="projects__subtitle3">Website</h3>
-                        <h2 class="projects__title" id="projects__title3">Site Manicure</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle3">API's</h3>
+                        <h2 class="projects__title" id="projects__title3">Buscador de CEP</h2>
 
                         <p class="projects__description" id="projects__description3">
-                            Projeto que você realiza na concepção e estrutura do layout,
-                            apresentando o desenho a pedido do cliente.
+                            Integração da API dos Correios para desenvolver um buscador de CEP utilizando <b>C#</b>.
+                             O objetivo foi permitir aos usuários obter informações precisas.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link" id="projects__link5">
+                        <a href="https://github.com/NotedSilva/BuscadorCep" target="_blank" class="projects__link" id="projects__link5">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link" id="projects__link6">
+                        <a class="projects__link" id="projects__link6">
                             <i class="ri-dribbble-line"></i>
                             Deploy
                         </a>
@@ -414,28 +414,28 @@
                     <div class="projects__image">
                         <img src="/assets/img/project-1.jpg" alt="imagem" class="projects__img">
 
-                        <a href="#" class="projects__button button">
+                        <a href="https://github.com/NotedSilva/AnimeNavigation" target="_blank" class="projects__button button">
                             <i class="ri-arrow-right-up-line"></i>
                         </a>
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle" id="projects__subtitle4">App</h3>
-                        <h2 class="projects__title" id="projects__title4">IMC App</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle4">App Mobile</h3>
+                        <h2 class="projects__title" id="projects__title4">Funcionalidades Mobile</h2>
 
                         <p class="projects__description" id="projects__description4">
-                            Projeto que você realiza na concepção e estrutura do layout,
-                            apresentando o desenho a pedido do cliente.
+                            Desenvolvi um aplicativo móvel utilizando <b>React Native</b> com o propósito central
+                             de conceber interfaces de navegação envolventes.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link" id="projects__link7">
+                        <a href="https://github.com/NotedSilva/AnimeNavigation" target="_blank" class="projects__link" id="projects__link7">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link" id="projects__link8">
+                        <a class="projects__link" id="projects__link8">
                             <i class="ri-dribbble-line"></i>
                             Deploy
                         </a>
